backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-presente-back
  namespace: stage-app-presente
  labels:
    app: app-presente-back
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-presente-back
  template:
    metadata:
      labels:
        app: app-presente-back
    spec:
      containers:
      - name: app-presente-back
        image: guilherme310402/app_presente_back:latest
        ports:
        - containerPort: 8000
        readinessProbe:
          httpGet:
            path: /api/health
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /api/health
            port: 8000
          initialDelaySeconds: 15
          periodSeconds: 10
        resources:
          limits:
            cpu: "500m"
            memory: "512Mi"
          requests:
            cpu: "200m"
            memory: "256Mi"
