deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-presente-back
  namespace: $NAMESPACE
  labels:
    app: app-presente-back
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-presente-back
  template:
    metadata:
      labels:
        app: app-presente-back
    spec:
      containers:
      - name: app-presente-back
        image: guilherme310402/app_presente_back:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
        readinessProbe:
          httpGet:
            path: /api/health
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /api/health
            port: 8000
          initialDelaySeconds: 15
          periodSeconds: 10
        resources:
          limits:
            cpu: "100m"
            memory: "256Mi"
          requests:
            cpu: "50m"
            memory: "128Mi"
