backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-presente-back-service
  namespace: app-chamada-production
spec:
  selector:
    app: app-presente-back
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
  type: ClusterIP
