backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-presente-back-ingress
  namespace: app-chamada-production
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "http://127.0.0.1:*, http://localhost:*, https://app.odeiojava.com.br"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-headers: "Content-Type, Authorization"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  rules:
  - host: api.odeiojava.com.br
    http:
      paths:
      - path: /api/(.*)
        pathType: Prefix
        backend:
          service:
            name: app-presente-back-service
            port:
              number: 8000
  tls:
  - hosts:
    - api.odeiojava.com.br
    secretName: odeiojava-tls
